--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DocuChain - Blockchain Document Verification</title>
+    <title>TrustIssues - Blockchain Document Verification</title>
     <meta name="description" content="Secure blockchain-based document validation and generation system for enterprises." />
-    <meta name="author" content="DocuChain" />
+    <meta name="author" content="TrustIssues" />
 
-    <meta property="og:title" content="DocuChain - Blockchain Document Verification" />
+    <meta property="og:title" content="TrustIssues - Blockchain Document Verification" />
     <meta property="og:description" content="Secure blockchain-based document validation and generation system for enterprises." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
